<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.siasg.comprasnet.ui.fragment.more.LicensesFragment" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragment.more.LicensesFragment">

            <View
                android:id="@+id/viewLicenses"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="?gradientBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLicenses"
                style="?titleStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/link_licencas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLicensesLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:clickable="true"
                android:fontFamily="@font/ubuntu_m"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8dp"
                android:onClick="@{fragment::abrirGitHub}"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:text="@string/link_licencas_git"
                android:textAlignment="center"
                android:textColor="?colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewLicenses" />

            <TextView
                android:id="@+id/tvLicensesData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/ubuntu_m"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8dp"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:text="@string/field_todas_licencas"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLicensesLink" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>